# llm-siri

./: README.md  pyproject.toml  run_server.sh
llm_siri/: utils.py
llm_siri/cli/: run_server.py
llm_siri/core/: service.py
script/: run_server.sh
src/llm_siri/: __init__.py
src/llm_siri/cli/: run_server.py
src/llm_siri/core/: service.py
src/llm_siri/models/: llm_config.py  message.py
src/llm_siri/utils/: logger.py
